Add anchor tags and its respectively pages
Add anchor tags for the recipes on the index.html for each recipe pages
and built the Boilerplate for each file.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/chilton-cocktail.html"></a>
+    <a href="recipes/chocolate-cold-brew.html"></a>
+    <a href="recipes/pink-drink.html"></a>
 </body>
 </html>
