Add images to its assigned folder
Used an unordered list to organize and format anchor tags, added images
for each page.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chilton-cocktail.html"></a>
-    <a href="recipes/chocolate-cold-brew.html"></a>
-    <a href="recipes/pink-drink.html"></a>
+
+    <img src="img/anime-drink.gif" alt="Gif of cold drink being mixed by someone">
+
+    <h3>A collection of cold drinks for everyone!</h3>
+
+    <ul>
+        <li><a href="recipes/chilton-cocktail.html" target="_self">Chilton Cocktail</a></li>
+        <li><a href="recipes/chocolate-cold-brew.html" target="_self">Chocolate Cream Cold Brew</a></li>
+        <li><a href="recipes/pink-drink.html" target="_self">Pink Drink</a></li>
+    </ul>
+    
 </body>
 </html>
