--- a/recipes/chilton-cocktail.html
+++ b/recipes/chilton-cocktail.html
@@ -6,7 +6,43 @@
     <title>Chilton Cocktail</title>
 </head>
 <body>
-    <h1>Chilton Cocktail</h1>
-    img
+    <h1 id="title">Chilton Cocktail</h1>
+    <img src="/img/chilton-cocktail.png" alt="Cold Chilton Cocktail">
+    <p>The Chilton cocktail, said to have originated in Lubbock, Texas, is a tangy and refreshing summer cocktail, perfect for those who don't like overly sweet drinks. Adjust the lemon and sparkling water to suit your taste.</p>
+    
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>
+            <p><b>1</b> tablespoon coarse salt, or as needed</p>
+        </li>
+        <li>
+            <p><b>1</b> lemon wedge</p>
+        </li>
+        <li>
+            <p><b>1 1/2</b> fluid ounces freshly-squeezed lemon juice</p>
+        </li>
+        <li>
+            <p><b>1 1/2</b> fluid ounces vodka</p>
+        </li>
+        <li>
+            <p><b>4</b> fluid ounces sparkling mineral water (such as <em>Topo Chico®</em>), or as needed</p>
+        </li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>
+            <p>Sprinkle salt onto a plate. Moisten the rim of a highball glass with lemon wedge. Press the moistened rim into salt. Fill the glass with ice.</p>
+        </li>
+        <li>
+            <p>Pour lemon juice and vodka over ice and gently stir. Top with sparkling water and serve with lemon wedge.</p>
+        </li>
+    </ol>
+    
+    <a href="#title"> Back to Top</a>
+    <br/>
+    <a href="/index.html" target="_self">Back to Home</a>
 </body>
 </html>
