--- a/recipes/chocolate-cold-brew.html
+++ b/recipes/chocolate-cold-brew.html
@@ -6,6 +6,54 @@
     <title>Chocolate Cream Cold Brew</title>
 </head>
 <body>
-    <h1>Chocolate Cream Cold Brew</h1>
+    <h1 id="title">Chocolate Cream Cold Brew</h1>
+    <img src="/img/chocolate-cold-brew.png" alt="Chocolate Cream Cold Brew">
+    <p>Ready in under 5 minutes, this chocolate foam cold brew tastes just like the one from that famous coffee house! And the best part is, it only costs a fraction of what that coffee house charges.</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+
+        <li>
+            <p>2 tablespoons heavy whipping cream</p>
+        </li>
+
+        <li>
+            <p>1 tablespoon milk</p>
+        </li>
+
+        <li>
+            <p>1 1/2 teaspoons chocolate syrup (such as Torani® Sugar Free Syrup)</p>
+        </li>
+
+        <li>
+            <p>1 1/2 teaspoons cocoa powder</p>
+        </li>
+
+        <li>
+            <p>1/2 teaspoon vanilla extract</p>
+        </li>
+
+        <li>
+            <p>1 cup cold brew coffee</p>
+        </li>
+
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>
+            <p>Add heavy whipping cream, milk, chocolate syrup, cocoa powder and vanilla into a tall glass. Whip with a milk frother until until desired consistency is reached.</p>
+        </li>
+
+        <li>
+            <p>Serve over cold brew coffee.</p>
+        </li>
+    </ol>
+
+    <a href="#title"> Back to Top</a>
+    <br/>
+    <a href="/index.html" target="_self">Back to Home</a>
 </body>
 </html>
