--- a/recipes/pink-drink.html
+++ b/recipes/pink-drink.html
@@ -6,7 +6,54 @@
     <title>Pink Drink</title>
 </head>
 <body>
-    <h1>Pink Drink</h1>
+    <h1 id="title">Pink Drink</h1>
     <img src="/img/pink-drink.png" alt="Pink Drink">
+    <p>Starbucks lovers rejoice! Mock their famous "Pink Drink" in your own kitchen with this easy copycat recipe.</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>
+            <p>½ cup water</p>
+        </li>
+
+        <li>
+            <p>¼ cup white grape juice or white cranberry juice</p>
+        </li>
+
+        <li>
+            <p>1 serving wild strawberry sugar-free drink mix (such as Crystal Light)</p>
+        </li>
+
+        <li>
+            <p>1 (2 g) bag hibiscus tea (such as Tazo Passion®)</p>
+        </li>
+
+        <li>
+            <p>2 ¼ cups refrigerated unsweetened coconut milk</p>
+        </li>
+
+        <li>
+            <p>ice cubes, freeze-dried strawberries, or sliced fresh or frozen strawberries as garnish (optional)</p>
+        </li>
+
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>
+            <p>Pour water, juice, and drink mix into a glass. Stir to dissolve. Add tea bag. Let stand for 5 minutes (it doesn't have to be hot). Remove and discard tea bag.</p>
+        </li>
+
+        <li>
+            <p>Fill 2 tall glasses with ice. Add half the strawberry-tea mixture and half the coconut milk to each glass. Stir to combine. Stir in strawberries (if using).</p>
+        </li>
+    </ol>
+
+    <a href="#title"> Back to Top</a>
+    <br/>
+    <a href="/index.html" target="_self">Back to Home</a>
+
 </body>
 </html>
